
 748.	[doc]		List supported RFCs in doc/misc/rfc-compliance.
			[RT #781]

 747.	[bug]		The code to determine whether an IXFR was possible
			did not properly check for a database that could
			not have a journal. [RT #865, #908]

 746.	[bug]		The sdb didn't clone rdatasets properly, causing
			a crash when the server followed delegations. [RT #905]

 745.	[func]		Report the owner name of records that fail
			semantic checks while loading.

 744.	[bug]		When returning DNS_R_CNAME or DNS_R_DNAME as the
			result of an ANY or SIG query, the resolver failed
			to setup the return event's rdatasets, causing an
			assertion failure in the query code.  [RT #881]

 743.	[bug]		Receiving a large number of certain malformed
			answers could cause named to stop responding.
			[RT #861]

 742.	[placeholder]

 741.	[port]		Support openssl-engine. [RT #709]

 740.	[port]		Handle openssl library mismatches slightly better.

 739.	[port]		Look for /dev/random in configure, rather than
			assuming it will be there for only a predefined
			set of OSes.

 738.	[bug]		If a non-threadsafe sdb driver supported AXFR and
			received an AXFR request, it would deadlock or die
			with an assertion failure. [RT #852]

 737.	[port]		stdtime.c failed to compile on certain platforms.

 736.	[func]		New functions isc_task_{begin,end}exclusive().

 735.	[doc]		Add BIND 4 migration notes.

 734.	[bug]		An attempt to re-lock the zone lock could occur if
			the server was shutdown during a zone tranfer.
			[RT #830]

 733.	[bug]		Reference counts of dns_acl_t objects need to be
			locked but were not. [RT #801, #821]

 732.	[bug]		Glue with 0 TTL could also cause SERVFAIL.  [RT #828]

 731.	[bug]		Certain zone errors could cause named-checkzone to
			fail ungracefully.  [RT #819]

 730.	[bug]		lwres_getaddrinfo() returns the correct result when
			it fails to contact a server. [RT #768]

 729.	[port]		pthread_setconcurrency() needs to be called on Solaris.
